--- a/products-view.html
+++ b/products-view.html
@@ -285,6 +285,8 @@
         crossorigin="anonymous"></script>
 <!--Functionality for input range-->
 <script src="javascript-files/filters.js"></script>
+<script src="javascript-files/navbar.js"></script>
+
 
 </body>
 </html>
