--- a/register-page.html
+++ b/register-page.html
@@ -160,5 +160,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 <script src="js/validate-registration.js"></script>
+<script src="javascript-files/navbar.js"></script>
+
 
 </html>
