--- a/admin_index.html
+++ b/admin_index.html
@@ -22,9 +22,9 @@
 <!-- Horny navbar -->
 <nav class="navbar bg-light navbar-light d-flex justify-content-center">
     <div class="container-fluid justify-content-start">
-        <a href="#" class="nav-link menu-item strong-active">Muži</a>
-        <a href="#" class="nav-link menu-item">Ženy</a>
-        <a href="#" class="nav-link menu-item">Deti</a>
+        <a href="#" class="nav-link gender-item strong-active">Muži</a>
+        <a href="#" class="nav-link gender-item">Ženy</a>
+        <a href="#" class="nav-link gender-item">Deti</a>
     </div>
 
     <!-- Logo -->
@@ -39,13 +39,13 @@
 <!-- Hlavna navigacia -->
 <nav class="navbar navbar-expand-xl bg-light navbar-light">
     <div class="container-fluid justify-content-start">
-        <a href="#" class="nav-link menu-item active">Novinky</a>
-        <a href="#" class="nav-link menu-item">Oblečenie</a>
-        <a href="#" class="nav-link menu-item">Topánky</a>
-        <a href="#" class="nav-link menu-item">Šport</a>
-        <a href="#" class="nav-link menu-item">Streetwear</a>
-        <a href="#" class="nav-link menu-item">Doplnky</a>
-        <a href="#" class="nav-link menu-item">Výpredaj</a>
+        <a href="#" class="nav-link category-item active"  >Novinky</a>
+        <a href="#" class="nav-link category-item" onclick="window.location.href='admin_products_view.html'">Oblečenie</a>
+        <a href="#" class="nav-link category-item" onclick="window.location.href='admin_products_view.html'">Topánky</a>
+        <a href="#" class="nav-link category-item" onclick="window.location.href='admin_products_view.html'">Šport</a>
+        <a href="#" class="nav-link category-item" onclick="window.location.href='admin_products_view.html'">Streetwear</a>
+        <a href="#" class="nav-link category-item" onclick="window.location.href='admin_products_view.html'">Doplnky</a>
+        <a href="#" class="nav-link category-item" onclick="window.location.href='admin_products_view.html'">Výpredaj</a>
 
         <!-- tlacidlo na rozbalenie menu -->
         <button class="navbar-toggler ms-auto bg-light" type="button"
@@ -65,7 +65,7 @@
                     <span style="font-weight: bold;">STE PRIHLÁSENÝ AKO ADMIN</span>
                 </li>
                 <li class="menu-item d-flex align-items-center ms-3">
-                    <button class="btn btn-dark btn-sm">Odhlásiť sa</button>
+                    <button class="btn btn-dark btn-sm" onclick="window.location.href='index.html'">Odhlásiť sa</button>
                 </li>
             </ul>
         </div>
@@ -113,58 +113,131 @@
     <section>
         <div class="section-header">
             <div class="section-title">Najnovšie produkty</div>
-            <button class="shop-all-btn">Shop All</button>
+            <button class="shop-all-btn" onclick="window.location.href='admin_products_view.html'" >Shop All</button>
         </div>
         <div class="product-grid">
             <!-- Product items here -->
         </div>
 
         <div class="product-grid">
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
-                <div class="price">100$</div>
-            </a>
+            <div class="product-item">
+                <a  class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name">Bunda_1</div>
+                    <div class="price">100$</div>
+                </a>
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+            <div class="product-item">
+                <a  class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name">Nohavice_1</div>
+                    <div class="price">100$</div>
+                </a>
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+            <div class="product-item">
+                <a  class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name">Tricko_1</div>
+                    <div class="price">100$</div>
+                </a>
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
+
+            <div class="product-item">
+                <a  class="product-link">
+                    <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name">Bunda_2</div>
+                    <div class="price">100$</div>
+                </a>
+                <button class="admin-product-edit" aria-label="Edit product">
+                    <img src="images/edit.png" alt="edit">
+                </button>
+                <button class="admin-product-delete" aria-label="Delete product">
+                    <img src="images/delete.png" alt="delete">
+                </button>
+            </div>
         </div>
     </section>
 
     <section>
         <div class="product-grid">
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
-                <div class="price">100$</div>
-            </a>
-            <a href="products-view.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
-                <div class="price">100$</div>
-            </a>
+
+            <div class="product-grid">
+                <div class="product-item">
+                    <a class="product-link">
+                        <img src="images/tricko.jpg" alt="tricko">
+                        <div class="product-name">Bunda_1</div>
+                        <div class="price">100$</div>
+                    </a>
+                    <button class="admin-product-edit" aria-label="Edit product">
+                        <img src="images/edit.png" alt="edit">
+                    </button>
+                    <button class="admin-product-delete" aria-label="Delete product">
+                        <img src="images/delete.png" alt="delete">
+                    </button>
+                </div>
+
+                <div class="product-item">
+                    <a class="product-link">
+                        <img src="images/tricko.jpg" alt="tricko">
+                        <div class="product-name">Nohavice_1</div>
+                        <div class="price">100$</div>
+                    </a>
+                    <button class="admin-product-edit" aria-label="Edit product">
+                        <img src="images/edit.png" alt="edit">
+                    </button>
+                    <button class="admin-product-delete" aria-label="Delete product">
+                        <img src="images/delete.png" alt="delete">
+                    </button>
+                </div>
+
+                <div class="product-item">
+                    <a class="product-link">
+                        <img src="images/tricko.jpg" alt="tricko">
+                        <div class="product-name">Tricko_1</div>
+                        <div class="price">100$</div>
+                    </a>
+                    <button class="admin-product-edit" aria-label="Edit product">
+                        <img src="images/edit.png" alt="edit">
+                    </button>
+                    <button class="admin-product-delete" aria-label="Delete product">
+                        <img src="images/delete.png" alt="delete">
+                    </button>
+                </div>
+
+                <div class="product-item">
+                    <a class="product-link">
+                        <img src="images/tricko.jpg" alt="tricko">
+                        <div class="product-name">Bunda_2</div>
+                        <div class="price">100$</div>
+                    </a>
+                    <button class="admin-product-edit" aria-label="Edit product">
+                        <img src="images/edit.png" alt="edit">
+                    </button>
+                    <button class="admin-product-delete" aria-label="Delete product">
+                        <img src="images/delete.png" alt="delete">
+                    </button>
+                </div>
+            </div>
         </div>
     </section>
 </main>
@@ -173,7 +246,7 @@
 <section class="adding-item-div">
     <h2>Pridať nový produkt</h2>
     <div id="add_product">
-        <a href="#" class="product-item">
+        <a href="#" class="product-item" onclick="window.location.href='admin_add_product_detail.html'">
             <img src="images/add_new.svg" alt="tricko">
         </a>
     </div>
@@ -184,6 +257,7 @@
     &copy; 2025 Made with love from xStefanec & xKazimir
 </footer>
 
+<script src="javascript-files/navbar.js"></script>
 
 <!-- Bootstrap JavaScript -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
