added admin_edit_product_detail page, finished linking pages on admin_index

--- a/admin_index.html
+++ b/admin_index.html
@@ -126,7 +126,7 @@
                     <div class="product-name">Bunda_1</div>
                     <div class="price">100$</div>
                 </a>
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -140,7 +140,7 @@
                     <div class="product-name">Nohavice_1</div>
                     <div class="price">100$</div>
                 </a>
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -154,7 +154,7 @@
                     <div class="product-name">Tricko_1</div>
                     <div class="price">100$</div>
                 </a>
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -168,7 +168,7 @@
                     <div class="product-name">Bunda_2</div>
                     <div class="price">100$</div>
                 </a>
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -188,7 +188,7 @@
                         <div class="product-name">Bunda_1</div>
                         <div class="price">100$</div>
                     </a>
-                    <button class="admin-product-edit" aria-label="Edit product">
+                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                         <img src="images/edit.png" alt="edit">
                     </button>
                     <button class="admin-product-delete" aria-label="Delete product">
@@ -202,7 +202,7 @@
                         <div class="product-name">Nohavice_1</div>
                         <div class="price">100$</div>
                     </a>
-                    <button class="admin-product-edit" aria-label="Edit product">
+                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                         <img src="images/edit.png" alt="edit">
                     </button>
                     <button class="admin-product-delete" aria-label="Delete product">
@@ -216,7 +216,7 @@
                         <div class="product-name">Tricko_1</div>
                         <div class="price">100$</div>
                     </a>
-                    <button class="admin-product-edit" aria-label="Edit product">
+                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                         <img src="images/edit.png" alt="edit">
                     </button>
                     <button class="admin-product-delete" aria-label="Delete product">
@@ -230,7 +230,7 @@
                         <div class="product-name">Bunda_2</div>
                         <div class="price">100$</div>
                     </a>
-                    <button class="admin-product-edit" aria-label="Edit product">
+                    <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                         <img src="images/edit.png" alt="edit">
                     </button>
                     <button class="admin-product-delete" aria-label="Delete product">
