finished linking pages :)

--- a/admin_products_view.html
+++ b/admin_products_view.html
@@ -23,9 +23,9 @@
 <!-- Horny navbar -->
 <nav class="navbar bg-light navbar-light d-flex justify-content-center">
     <div class="container-fluid justify-content-start">
-        <a href="#" class="nav-link menu-item strong-active">Muži</a>
-        <a href="#" class="nav-link menu-item">Ženy</a>
-        <a href="#" class="nav-link menu-item">Deti</a>
+        <a href="#" class="nav-link gender-item strong-active">Muži</a>
+        <a href="#" class="nav-link gender-item">Ženy</a>
+        <a href="#" class="nav-link gender-item">Deti</a>
     </div>
 
     <!-- Logo -->
@@ -40,13 +40,13 @@
 <!-- Hlavna navigacia -->
 <nav class="navbar navbar-expand-xl bg-light navbar-light">
     <div class="container-fluid justify-content-start">
-        <a href="#" class="nav-link menu-item active" onclick="window.location.href='index.html'" >Novinky</a>
-        <a href="#" class="nav-link menu-item" onclick="window.location.href='admin_index.html'">Oblečenie</a>
-        <a href="#" class="nav-link menu-item" onclick="window.location.href='admin_index.html'">Topánky</a>
-        <a href="#" class="nav-link menu-item" onclick="window.location.href='admin_index.html'">Šport</a>
-        <a href="#" class="nav-link menu-item" onclick="window.location.href='admin_index.html'">Streetwear</a>
-        <a href="#" class="nav-link menu-item" onclick="window.location.href='admin_index.html'">Doplnky</a>
-        <a href="#" class="nav-link menu-item" onclick="window.location.href='admin_index.html'">Výpredaj</a>
+        <a href="#" class="nav-link category-item active"  onclick="window.location.href='admin_index.html'">Novinky</a>
+        <a href="#" class="nav-link category-item" >Oblečenie</a>
+        <a href="#" class="nav-link category-item" >Topánky</a>
+        <a href="#" class="nav-link category-item" >Šport</a>
+        <a href="#" class="nav-link category-item" >Streetwear</a>
+        <a href="#" class="nav-link category-item" >Doplnky</a>
+        <a href="#" class="nav-link category-item" >Výpredaj</a>
 
         <!-- tlacidlo na rozbalenie menu -->
         <button class="navbar-toggler ms-auto bg-light" type="button"
@@ -91,7 +91,7 @@
                 <span style="font-weight: bold;">STE PRIHLÁSENÝ AKO ADMIN</span>
             </li>
             <li class="menu-item">
-                <button class="btn btn-dark btn-sm">Odhlásiť sa</button>
+                <button class="btn btn-dark btn-sm" onclick="window.location.href='index.html'">Odhlásiť sa</button>
             </li>
         </ul>
     </div>
@@ -165,7 +165,7 @@
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -181,7 +181,7 @@
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -197,7 +197,7 @@
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -213,7 +213,7 @@
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -228,7 +228,7 @@
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -244,7 +244,7 @@
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
@@ -259,7 +259,7 @@
                     <div class="product-price"><span>$70</span></div>
                 </a>
 
-                <button class="admin-product-edit" aria-label="Edit product">
+                <button class="admin-product-edit" aria-label="Edit product" onclick="window.location.href='admin_edit_product_detail.html'">
                     <img src="images/edit.png" alt="edit">
                 </button>
                 <button class="admin-product-delete" aria-label="Delete product">
