--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/checkout-address.css">
   <link rel="stylesheet" href="css/orders-table.css">
+  <link rel="stylesheet" href="css/profile.css">
   <title>Adko Petko Market</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
 
 <!--**************** START OF TOP NAVBAR ********************-->
 <!-- Horny cierny pruh -->
+<div class="content-wrapper">
 <div class="top-bar">
   Až 50% zľava na vybrané produkty do konca augusta
 </div>
@@ -22,9 +24,9 @@
 <!-- Horny navbar -->
 <nav class="navbar bg-light navbar-light d-flex justify-content-center">
   <div class="container-fluid justify-content-start">
-    <a href="#" class="nav-link menu-item strong-active">Muži</a>
-    <a href="#" class="nav-link menu-item">Ženy</a>
-    <a href="#" class="nav-link menu-item">Deti</a>
+    <a href="#" class="nav-link gender-item strong-active">Muži</a>
+    <a href="#" class="nav-link gender-item">Ženy</a>
+    <a href="#" class="nav-link gender-item">Deti</a>
   </div>
 
   <!-- Logo -->
@@ -39,13 +41,13 @@
 <!-- Hlavna navigacia -->
 <nav class="navbar navbar-expand-xl bg-light navbar-light">
   <div class="container-fluid justify-content-start">
-    <a href="#" class="nav-link menu-item active">Novinky</a>
-    <a href="#" class="nav-link menu-item">Oblečenie</a>
-    <a href="#" class="nav-link menu-item">Topánky</a>
-    <a href="#" class="nav-link menu-item">Šport</a>
-    <a href="#" class="nav-link menu-item">Streetwear</a>
-    <a href="#" class="nav-link menu-item">Doplnky</a>
-    <a href="#" class="nav-link menu-item">Výpredaj</a>
+    <a href="#" class="nav-link category-item"  onclick="window.location.href='index.html'">Novinky</a>
+    <a href="#" class="nav-link category-item" onclick="window.location.href='products-view.html'">Oblečenie</a>
+    <a href="#" class="nav-link category-item" onclick="window.location.href='products-view.html'">Topánky</a>
+    <a href="#" class="nav-link category-item" onclick="window.location.href='products-view.html'">Šport</a>
+    <a href="#" class="nav-link category-item" onclick="window.location.href='products-view.html'">Streetwear</a>
+    <a href="#" class="nav-link category-item" onclick="window.location.href='products-view.html'">Doplnky</a>
+    <a href="#" class="nav-link category-item" onclick="window.location.href='products-view.html'">Výpredaj</a>
 
     <!-- tlacidlo na rozbalenie menu -->
     <button class="navbar-toggler ms-auto bg-light" type="button"
@@ -57,18 +59,19 @@
     <!-- navigacne menu -->
     <div class="collapse navbar-collapse justify-content-end" id="navmenu">
       <ul class="navbar-nav ms-auto d-flex">
-        <li class="menu-item">
+        <li class="menu-item d-flex align-items-center search-group">
           <img src="images/lupa.png" alt="lupa" class="navbar-icon">
           <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
         </li>
+
         <li class="menu-item active">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="shopping_cart.html">
             <img src="images/kosik.png" alt="Košík" class="navbar-icon">
             <span>2 Košík</span>
           </a>
         </li>
         <li class="menu-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="login-page.html">
             <img src="images/prihlasenie.png" alt="login" class="navbar-icon">
             Prihlásenie
           </a>
@@ -93,18 +96,18 @@
   </div>
   <div class="offcanvas-body">
     <ul class="navbar-nav ms-auto d-flex">
-      <li class="menu-item">
+      <li class="menu-item d-flex align-items-center search-group">
         <img src="images/lupa.png" alt="lupa" class="navbar-icon">
         <input type="text" class="form-control nav-textfield" placeholder="Vyhľadaj">
       </li>
       <li class="menu-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="shopping_cart.html">
           <img src="images/kosik.png" alt="Košík" class="navbar-icon">
           2 Košík
         </a>
       </li>
       <li class="menu-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="login-page.html">
           <img src="images/prihlasenie.png" alt="login" class="navbar-icon">
           Prihlásenie
         </a>
@@ -118,9 +121,7 @@
     </ul>
   </div>
 </div>
-
-<!-- ********************************************* END OF NAVBAR  **************************************************-->
-
+  <!-- ********************************************* END OF NAVBAR  **************************************************-->
 
 <main class="container">
   <section class="summary-card">
@@ -196,7 +197,7 @@
   </table>
 </section>
 
-
+</div>
 
 <!-- FOOTER -->
 <footer>
