--- a/admin_add_product_detail.html
+++ b/admin_add_product_detail.html
@@ -89,7 +89,7 @@
                 <span style="font-weight: bold;">STE PRIHLÁSENÝ AKO ADMIN</span>
             </li>
             <li class="menu-item">
-                <button class="btn btn-dark btn-sm">Odhlásiť sa</button>
+                <button class="btn btn-dark btn-sm" onclick="window.location.href='index.html'">Odhlásiť sa</button>
             </li>
         </ul>
     </div>
