added various pictures on non-admin screens

--- a/product-detail.html
+++ b/product-detail.html
@@ -128,16 +128,16 @@
 <div class="container">
   <div class="product-images-grid" >
      <div class="product-image-div">
-        <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
+        <img src="images/nohavice_1.webp" data-src="images/tricko.jpg" alt="tricko" class="product-image">
      </div>
     <div class="product-image-div">
-      <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
+      <img src="images/nohavice_1_2.webp" data-src="images/nohavice_1_2.webp" alt="tricko" class="product-image">
     </div>
     <div class="product-image-div">
-      <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
+      <img src="images/nohavice_1_3.webp" data-src="images/nohavice_1_3.webp" alt="tricko" class="product-image">
     </div>
     <div class="product-image-div">
-      <img src="images/tricko.jpg" data-src="images/tricko.jpg" alt="tricko" class="product-image">
+      <img src="images/nohavice_1_4.webp" data-src="images/nohavice_1_4.webp" alt="tricko" class="product-image">
     </div>
   </div>
 
@@ -151,7 +151,7 @@
   <div class="product-description">
 
     <h1>
-      Jarna bunda
+      Work pant
     </h1>
 
     <span id="product-price">100 $</span>
