--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -128,9 +128,9 @@
     <h2>Tvoj košík</h2>
 
     <div class="item">
-      <img alt="Bunda Adidas" src="images/tricko.jpg">
+      <img alt="Nohavice_1" src="images/nohavice_1.webp">
       <div class="details">
-        <h3>Bunda Adidas</h3>
+        <h3>Nohavice_1</h3>
         <span>Veľkosť: L</span>
         <span class="price">$100</span>
       </div>
@@ -147,9 +147,9 @@
 
 
     <div class="item">
-      <img alt="Bunda Adidas" src="images/tricko.jpg">
+      <img alt="Bunda" src="images/budna_1.jpg.webp">
       <div class="details">
-        <h3>Bunda Adidas</h3>
+        <h3>Bunda_1</h3>
         <span>Veľkosť: L</span>
         <span class="price">$100</span>
       </div>
@@ -166,10 +166,10 @@
 
 
     <div class="item">
-      <img alt="Bunda Adidas" src="images/tricko.jpg">
+      <img alt="Bunda_2" src="images/bunda_2.webp">
       <div class="details">
-        <h3>Bunda Adidas</h3>
-        <span>Veľkosť: L</span>
+        <h3>Bunda_2</h3>
+        <span>Veľkosť: XL</span>
         <span class="price">$100</span>
       </div>
 
