--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
 
         <div class="product-grid">
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
+                <img src="images/budna_1.jpg.webp" alt="tricko">
                 <div class="product-name">Bunda_1</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
+                <img src="images/nohavice_1.webp" alt="tricko">
                 <div class="product-name">Nohavice_1</div>
                 <div class="price">100$</div>
             </a>
@@ -158,7 +158,7 @@
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
+                <img src="images/bunda_2.webp" alt="tricko">
                 <div class="product-name">Bunda_2</div>
                 <div class="price">100$</div>
             </a>
@@ -168,23 +168,23 @@
     <section>
         <div class="product-grid">
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
+                <img src="images/hodinky_1.webp" alt="tricko">
+                <div class="product-name">Hodinky_1</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
+                <img src="images/kosela_1.webp" alt="tricko">
+                <div class="product-name">Kosela_1</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
+                <img src="images/mikina_1.webp" alt="tricko">
+                <div class="product-name">Mikina_1</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
+                <img src="images/nohavice_2.webp" alt="tricko">
+                <div class="product-name">Nohavice_2</div>
                 <div class="price">100$</div>
             </a>
         </div>
@@ -198,23 +198,23 @@
         </div>
         <div class="product-grid">
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_1</div>
+                <img src="images/topanky_1.webp" alt="tricko">
+                <div class="product-name">Topanky_1</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Nohavice_1</div>
+                <img src="images/kosela_2.webp" alt="tricko">
+                <div class="product-name">Kosela_2</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Tricko_1</div>
+                <img src="images/topanky_2.webp" alt="tricko">
+                <div class="product-name">Topanky_2</div>
                 <div class="price">100$</div>
             </a>
             <a href="product-detail.html" class="product-item">
-                <img src="images/tricko.jpg" alt="tricko">
-                <div class="product-name">Bunda_2</div>
+                <img src="images/topanky_3.webp" alt="tricko">
+                <div class="product-name">Topanky_3</div>
                 <div class="price">100$</div>
             </a>
         </div>
