--- a/products-view.html
+++ b/products-view.html
@@ -183,6 +183,14 @@
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
                     <img src="images/tricko.jpg" alt="tricko">
+                    <div class="product-name"><span>Tricko_1</span></div>
+                    <div class="product-price"><span>$70</span></div>
+                </a>
+            </div>
+
+            <div class="product-item">
+                <a href="product-detail.html" class="product-link">
+                    <img src="images/nohavice_1.webp" alt="tricko">
                     <div class="product-name"><span>Nohavice_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
@@ -190,72 +198,64 @@
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/nohavice_2.webp" alt="tricko">
+                    <div class="product-name"><span>Nohavice_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/kosela_1.webp" alt="tricko">
+                    <div class="product-name"><span>Kosela_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/kosela_2.webp" alt="tricko">
+                    <div class="product-name"><span>Kosela_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/topanky_1.webp" alt="tricko">
+                    <div class="product-name"><span>Topanky_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/topanky_2.webp" alt="tricko">
+                    <div class="product-name"><span>Topanky_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/topanky_3.webp" alt="tricko">
+                    <div class="product-name"><span>Topanky_3</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/budna_1.jpg.webp" alt="tricko">
+                    <div class="product-name"><span>Bunda_1</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
 
             <div class="product-item">
                 <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
-                    <div class="product-price"><span>$70</span></div>
-                </a>
-            </div>
-
-            <div class="product-item">
-                <a href="product-detail.html" class="product-link">
-                    <img src="images/tricko.jpg" alt="tricko">
-                    <div class="product-name"><span>Nohavice_1</span></div>
+                    <img src="images/bunda_2.webp" alt="tricko">
+                    <div class="product-name"><span>Bunda_2</span></div>
                     <div class="product-price"><span>$70</span></div>
                 </a>
             </div>
